<resources>
    <string name="app_name">EngineeringAcademy</string>

    <!-- Sign In Screen -->

    <string name="logo_description">EA Logo</string>
    <string name="email_id_hint">Email Id</string>
    <string name="password_hint">Password</string>
    <string name="add_hint">Address</string>
    <string name="add_city">City</string>
    <string name="add_state">State</string>
    <string name="sign_in">Sign In</string>
    <string name="not_registered">Not Registered ?</string>
    <string name="sign_up">Sign Up</string>
    <string name="update">Update</string>

    <!-- Sign Up Screen -->
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="phone">Phone Number</string>
    <string name="already_registered">Already Registered ?</string>

    <!-- Courses Screen -->
    <string name="mechanical">Mechanical</string>
    <string name="civil">Civil</string>
    <string name="railways">Railways</string>
    <string name="computer">Computer</string>
    <string name="miscellaneous">Miscellaneous</string>

    <!-- Toolbar Title-->
    <string name="courses">Courses</string>
    <string name="packages">Packages</string>
    <string name="exams">Exams</string>
    <string name="exam">Exam</string>
    <string name="answers">Answers</string>
    <string name="articles">Articles</string>
    <string name="downloads">Downloads</string>

    <string name="title">Title</string>
    <string name="categoryid">category_id</string>
    <string name="subcategoryid">sub_category_id</string>
    <string name="userid">user_id</string>
    <string name="examid">exam_id</string>
    <string name="examduration">exam_duration</string>
    <string name="totalquestions">total_questions</string>
    <string name="payment_paid">Paid</string>
    <string name="result">Result</string>
    <string name="my_profile">My Profile</string>
    <string name="answer_pdf">Answers PDF</string>
    <string name="result_pdf">Results PDF</string>
    <string name="forgot_password"><u>Forgot Password</u></string>
    <string name="enter_your_registered_email_id_here">Enter your Registered email ID here...</string>
    <string name="send">Send</string>
    <string name="cancel">Cancel</string>
    <string name="country_code">+91</string>
    <string name="or_you_can_use">Or you can login with...</string>
    <string name="my_downloads">My Downloads</string>
    <string name="my_results">My Results</string>
    <string name="update_profile">Update Profile</string>
    <string name="share_app">Share App</string>
    <string name="logout">Logout</string>

    <string name="facebook_app_id">2338304859723618</string>
    <string name="fb_login_protocol_scheme">fb2338304859723618</string>

</resources>
