<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.SignInActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/ea_bg"
        android:fillViewport="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            >

            <LinearLayout
                android:id="@+id/layout_Sign_In"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_large"
                android:layout_marginLeft="@dimen/margin_large"
                android:layout_marginEnd="@dimen/margin_large"
                android:layout_marginRight="@dimen/margin_large"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/image_Logo"
                    android:layout_width="@dimen/logo_width_default"
                    android:layout_height="@dimen/logo_height_default"
                    android:layout_gravity="center"
                    android:contentDescription="@string/logo_description"
                    android:src="@drawable/logo"
                    />

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_medium"
                    android:background="@drawable/email_base"
                    android:paddingTop="@dimen/padding_large">

                    <EditText
                        android:id="@+id/edittext_Email_Id"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/margin_small"
                        android:textSize="@dimen/text_default"
                        android:hint="@string/email_id_hint"
                        android:inputType="textEmailAddress" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_default"
                    android:background="@drawable/email_base"
                    android:paddingTop="@dimen/padding_large">

                    <EditText
                        android:id="@+id/edittext_Password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/margin_small"
                        android:textSize="@dimen/text_default"
                        android:hint="@string/password_hint"
                        android:inputType="textPassword" />

                </android.support.design.widget.TextInputLayout>

                <TextView
                    android:id="@+id/textview_ForgotPassword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:layout_gravity="end"
                    android:layout_marginRight="@dimen/margin_default"
                    android:layout_marginEnd="@dimen/margin_default"
                    android:layout_marginTop="@dimen/margin_default"
                    android:layout_marginBottom="@dimen/margin_default"
                    android:textStyle="bold"
                    android:text="@string/forgot_password"
                    android:textColor="@android:color/white" />

                <Button
                    android:id="@+id/button_Sign_In"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginTop="@dimen/margin_small"
                    android:background="@drawable/button_signin"
                    android:text="@string/sign_in"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/text_medium" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_google"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/layout_Sign_In"
                android:layout_margin="@dimen/margin_small"
                android:layout_marginTop="@dimen/margin_large"
                android:orientation="vertical"
                android:gravity="center">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/or_you_can_use"
                    android:textAlignment="center"
                    android:layout_margin="@dimen/margin_small"
                    android:textStyle="bold"
                    android:textColor="@color/textColorWhite"
                    android:textSize="@dimen/text_default"
                    />
                <com.google.android.gms.common.SignInButton
                    android:id="@+id/google_sign_in_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_small"
                    />

                <com.facebook.login.widget.LoginButton
                    android:id="@+id/facebook_sign_in_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_margin="@dimen/margin_small" />

                <Button
                    android:id="@+id/fb"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="#416BC1"
                    android:onClick="onClick"
                    android:text="FaceBook"
                    android:textColor="#ffffff"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_Bottom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/layout_google"
                android:layout_marginLeft="@dimen/margin_large"
                android:layout_marginTop="@dimen/margin_small"
                android:layout_marginRight="@dimen/margin_large"
                android:layout_marginBottom="@dimen/margin_medium"
                android:gravity="bottom|center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:layout_marginRight="@dimen/margin_default"
                    android:layout_marginEnd="@dimen/margin_default"
                    android:text="@string/not_registered"
                    android:textColor="@android:color/white" />

                <TextView
                    android:id="@+id/textview_New_Sign_Up"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/sign_up"
                    android:textSize="@dimen/text_small"
                    android:textColor="@color/colorAccent"
                    android:textStyle="bold" />
            </LinearLayout>
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>