<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.SignUpActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/ea_bg"
        android:fillViewport="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/layout_Sign_Up"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginStart="@dimen/margin_large"
                android:layout_marginLeft="@dimen/margin_large"
                android:layout_marginEnd="@dimen/margin_large"
                android:layout_marginRight="@dimen/margin_large"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/image_Logo"
                    android:layout_width="@dimen/logo_width_default"
                    android:layout_height="@dimen/logo_height_default"
                    android:layout_gravity="center"
                    android:contentDescription="@string/logo_description"
                    android:src="@drawable/logo" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:baselineAligned="false" android:orientation="horizontal"
                    android:layout_marginTop="@dimen/margin_default"
                    android:layout_marginLeft="@dimen/margin_default"
                    android:layout_marginStart="@dimen/margin_default"
                    android:layout_marginRight="@dimen/margin_default"
                    android:layout_marginEnd="@dimen/margin_default"
                    >

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_marginTop="@dimen/margin_medium"
                        android:background="@drawable/email_base"
                        android:paddingTop="@dimen/padding_large">

                        <EditText
                            android:id="@+id/edittext_First_Name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="@dimen/margin_small"
                            android:textSize="@dimen/text_default"
                            android:hint="@string/first_name"
                            android:inputType="textEmailAddress" />

                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_marginTop="@dimen/margin_medium"
                        android:layout_marginLeft="@dimen/margin_default"
                        android:layout_marginStart="@dimen/margin_default"
                        android:background="@drawable/email_base"
                        android:paddingTop="@dimen/padding_large">

                        <EditText
                            android:id="@+id/edittext_Last_Name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="@dimen/margin_small"
                            android:textSize="@dimen/text_default"
                            android:hint="@string/last_name"
                            android:inputType="textEmailAddress" />

                    </android.support.design.widget.TextInputLayout>

                </LinearLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_default"
                    android:layout_marginLeft="@dimen/margin_default"
                    android:layout_marginStart="@dimen/margin_default"
                    android:layout_marginRight="@dimen/margin_default"
                    android:layout_marginEnd="@dimen/margin_default"
                    android:background="@drawable/email_base"
                    android:paddingTop="@dimen/padding_large">

                    <EditText
                        android:id="@+id/edittext_Phone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/margin_small"
                        android:textSize="@dimen/text_default"
                        android:hint="@string/phone"
                        android:inputType="phone" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/textinputlayout_EmailId"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_default"
                    android:layout_marginLeft="@dimen/margin_default"
                    android:layout_marginStart="@dimen/margin_default"
                    android:layout_marginRight="@dimen/margin_default"
                    android:layout_marginEnd="@dimen/margin_default"
                    android:background="@drawable/email_base"
                    android:paddingTop="@dimen/padding_large">

                    <EditText
                        android:id="@+id/edittext_Email_Id"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/margin_small"
                        android:textSize="@dimen/text_default"
                        android:hint="@string/email_id_hint"
                        android:inputType="textEmailAddress" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/textinputlayout_Password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_default"
                    android:layout_marginLeft="@dimen/margin_default"
                    android:layout_marginStart="@dimen/margin_default"
                    android:layout_marginRight="@dimen/margin_default"
                    android:layout_marginEnd="@dimen/margin_default"
                    android:background="@drawable/email_base"
                    android:paddingTop="@dimen/padding_large">

                    <EditText
                        android:id="@+id/edittext_Password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/margin_small"
                        android:textSize="@dimen/text_default"
                        android:hint="@string/password_hint"
                        android:inputType="textPassword" />

                </android.support.design.widget.TextInputLayout>

                <Button
                    android:id="@+id/button_Sign_Up"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_default"
                    android:layout_marginLeft="@dimen/margin_default"
                    android:layout_marginStart="@dimen/margin_default"
                    android:layout_marginRight="@dimen/margin_default"
                    android:layout_marginEnd="@dimen/margin_default"
                    android:background="@drawable/button_signin"
                    android:text="@string/sign_up"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/text_medium" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/layout_Sign_Up"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="@dimen/margin_large"
                android:layout_marginTop="@dimen/margin_small"
                android:layout_marginRight="@dimen/margin_large"
                android:layout_marginBottom="@dimen/margin_small"
                android:gravity="bottom|center">

                <TextView
                    android:id="@+id/textview_Already_Registered"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_marginRight="@dimen/margin_default"
                    android:layout_marginEnd="@dimen/margin_default"
                    android:text="@string/already_registered"
                    android:textColor="@android:color/white" />

                <TextView
                    android:id="@+id/textview_Sign_In"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_small"
                    android:layout_marginLeft="@dimen/margin_small"
                    android:gravity="center"
                    android:text="@string/sign_in"
                    android:textSize="@dimen/text_small"
                    android:textColor="@color/colorAccent"
                    android:textStyle="bold|italic" />
            </LinearLayout>
        </RelativeLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>