<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/holo_red_dark">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding_small"
            android:text="Forgot Password"
            android:textAlignment="center"
            android:textColor="@color/textColorWhite"
            android:textSize="@dimen/text_medium"
            android:textStyle="bold" />

    </LinearLayout>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_default"
        app:cardBackgroundColor="@color/colorDarkGrey"
        app:cardCornerRadius="4dp"
        app:cardElevation="4dp">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_small"
            android:layout_marginTop="@dimen/margin_default"
            android:background="@drawable/email_base"
            android:paddingTop="@dimen/padding_large">

            <EditText
                android:id="@+id/registeredEmailId"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/margin_small"
                android:hint="@string/enter_your_registered_email_id_here"
                android:inputType="textWebEmailAddress"
                android:textSize="@dimen/text_default" />

        </android.support.design.widget.TextInputLayout>
    </android.support.v7.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_Cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_default"
            android:layout_weight="1"
            android:background="@color/colorDarkRed"
            android:text="@string/cancel"
            android:textAllCaps="false"
            android:textColor="@color/textColorWhite"
            android:textSize="@dimen/text_small" />

        <Button
            android:id="@+id/button_Send"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_default"
            android:layout_weight="1"
            android:background="@color/colorDarkRed"
            android:text="@string/send"
            android:textAllCaps="false"
            android:textColor="@color/textColorWhite"
            android:textSize="@dimen/text_small" />

    </LinearLayout>
</LinearLayout>
